change to phaser- based

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
+<html>
+
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width'>
+    <title>VPLab-Undersea5</title>
+    <link href='style.css' rel='stylesheet' type='text/css' />
 </head>
+
 <body>
-    <canvas id="c"></canvas>
-    <script src="src/app.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/phaser-ce@2.11.0/build/phaser.min.js'></script>
+    <script src='src/app.js'></script>
 </body>
+
+</html>
