--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width'>
     <title>VPLab-Undersea5</title>
-    <link href='style.css' rel='stylesheet' type='text/css' />
+    <link href='/style.css' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
     <script src='https://cdn.jsdelivr.net/npm/underscore@1.9.1/underscore-min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/phaser-ce@2.11.0/build/phaser.min.js'></script>
-    <script src='src/app.js'></script>
+    <script src='/src/app.js'></script>
 </body>
 
 </html>
