--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src='https://cdn.jsdelivr.net/npm/underscore@1.9.1/underscore-min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/phaser-ce@2.11.0/build/phaser.min.js'></script>
     <script src='./src/app.js'></script>
 </body>
