--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <script src='https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/phaser-ce@2.11.0/build/phaser.min.js'></script>
+
+    <!-- scene -->
+    <script src='./src/mediumScene.js'></script>
+
+    <!-- main app last load -->
     <script src='./src/app.js'></script>
 </body>
 
