--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src='https://cdn.jsdelivr.net/npm/phaser-ce@2.11.0/build/phaser.min.js'></script>
 
     <!-- scene -->
+    <script src='./src/shallowScene.js'></script>
     <script src='./src/mediumScene.js'></script>
 
     <!-- main app last load -->
