--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- scene -->
     <script src='./src/shallowScene.js'></script>
     <script src='./src/mediumScene.js'></script>
+    <script src='./src/deepScene.js'></script>
 
     <!-- main app last load -->
     <script src='./src/app.js'></script>
