add submarine between shallow and medium

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src='./src/shallowScene.js'></script>
     <script src='./src/mediumScene.js'></script>
     <script src='./src/deepScene.js'></script>
+    <script src='./src/subdivingScene.js'></script>
 
     <!-- main app last load -->
     <script src='./src/app.js'></script>
